--- a/apache-tomcat-9.0.78/webapps/helloservlet/WEB-INF/web.xml
+++ b/apache-tomcat-9.0.78/webapps/helloservlet/WEB-INF/web.xml
@@ -5,8 +5,7 @@
   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
   
-
-<security-constraint>
+<!-- <security-constraint>
     <web-resource-collection>
         <web-resource-name>helloservlet</web-resource-name>
         <url-pattern>/query   </url-pattern>
@@ -14,7 +13,8 @@
     <user-data-constraint>
         <transport-guarantee>CONFIDENTIAL</transport-guarantee>
     </user-data-constraint>
-  </security-constraint>
+  </security-constraint> -->
+
   
 
 </web-app>
