--- a/TutApp/pom.xml
+++ b/TutApp/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.33</version>
     </dependency>
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jooq</artifactId>
+      <version>3.11.11</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>TutApp</finalName>
