--- a/TutApp/pom.xml
+++ b/TutApp/pom.xml
@@ -61,7 +61,7 @@
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
+        <artifactId>exec-maven-plugin</artifactId>`x``
         <version>1.2.1</version>
         <executions>
           <execution>
