--- a/tutorials-master/spring-boot-modules/spring-boot-react/pom.xml
+++ b/tutorials-master/spring-boot-modules/spring-boot-react/pom.xml
@@ -50,6 +50,17 @@
             <version>${spring-boot.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq</artifactId>
+            <version>3.11.11</version>
+        </dependency>
+
     </dependencies>
 
     <build>
