--- a/tutorials-master/spring-boot-modules/spring-boot-react/frontend/package.json
+++ b/tutorials-master/spring-boot-modules/spring-boot-react/frontend/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.5",
+    "@testing-library/dom": "^7.21.4",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "@testing-library/dom": "^7.21.4",
     "@types/webpack": "^5.28.0",
-    "sockjs-client": "^1.4.0",
-    "type-fest": "^0.13.1",
-    "webpack-hot-middleware": "^2.25.1",
-    "webpack-plugin-serve": "^1.5.0",
     "bootstrap": "^5.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
@@ -19,7 +19,11 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.10.0",
-    "web-vitals": "^1.1.1"
+    "sockjs-client": "^1.4.0",
+    "type-fest": "^0.13.1",
+    "web-vitals": "^1.1.1",
+    "webpack-hot-middleware": "^2.25.1",
+    "webpack-plugin-serve": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
